# link_aggregation_circuit

./: Cargo.toml  README.md  proof.proof  vk.key
src/: aggregation.rs  circuit.rs  lib.rs  test.rs  test_utils.rs  utils.rs  vks_tree.rs  witness.rs
