[package]
name = "recursive_aggregation_circuit"
version = "0.1.0"
authors = ["N Labs Team<nevermore@zklink.org>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
franklin-crypto = { git = "https://github.com/zkLinkProtocol/franklin-crypto.git", branch = "poseidon", features = [
  "multicore",
  "plonk",
] }
hex = "*"
once_cell = "*"
sha2 = "0.10.2"
